[package]
name = "aoc_macros"
version = "0.1.7"
edition = "2021"
description = "helper macros for AoC"
repository = "https://github.com/Ben-Lichtman/aoc_driver"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.32"
quote = "1.0.10"
syn = { version = "1.0.81", features = ["full", "extra-traits"] }
